# jylsp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.rst  build.sh  pixi.toml  tests.py  tests.sh
src/: backend.rs  main.rs  schema.rs  text_index.rs  tls.rs  validate.rs  yaml_json.rs  yaml_spans.rs
tests/cases/: bad_age.json  bad_age.yml  bad_age_comment.yml  bad_age_comment.yml.golden  bad_age_http.json  bad_age_http.json.golden  bad_age_multidoc.yml  bad_age_multidoc.yml.golden  bad_required.yml  bad_required.yml.golden  ok.json  ok.yml
tests/cases/schemas/: people.schema.json  person.schema.json  persons.schema.json
tests/http_schemas/: person.schema.json
