[package]
name = "jylsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.37"
referencing = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "rustls-rustcrypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

jsonc-parser = "0.28"
